--- a/styles/blocks/motto.scss
+++ b/styles/blocks/motto.scss
@@ -1,11 +1,11 @@
 .motto {
 
   height: 172px;
-  width: 290px;
+  max-width: 290px;
 
   @include onDesktop {
     
-    width: 456px;
+    max-width: 440px;
 
     color: #2b292d;
     line-height: 34px;
