--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,8 +11,12 @@
 @import "blocks/motto";
 @import "blocks/title";
 @import "blocks/button";
+@import "blocks/form";
 @import "blocks/picture";
-@import "blocks/media";
+@import "blocks/main";
+@import "blocks/content";
+@import "blocks/rubric";
+@import "blocks/footer";
 
 * {
   box-sizing: border-box;
