--- a/styles/blocks/button.scss
+++ b/styles/blocks/button.scss
@@ -6,7 +6,8 @@
   justify-content: center;
   align-items: center;
 
-  min-width: 290px;
+  width: 100%;
+  max-width: 290px;
   height: 48px;
 
   padding: 0 18px;
@@ -18,7 +19,7 @@
   cursor: pointer;
 
   @include onDesktop {
-    min-width: 160px;
+    max-width: 160px;
   }
 
   &_blue {
