--- a/styles/blocks/header.scss
+++ b/styles/blocks/header.scss
@@ -1,17 +1,27 @@
 .header {
   display: flex;
   flex-direction: column;
-
-  height: 890px;
-  width: 1400px;
-
-  box-sizing: border-box;
+  align-items: center;
 
   
+  box-sizing: border-box;
 
+  background-color: #f3c6bd;
+
+  height: 890px;
+ 
   @include onDesktop {
     height: 710px;
+    width: 100vw;
   }   
+
+  &__content {
+    width: 100vw;
+
+    @include onDesktop {
+      width: 1400px;
+    } 
+  }
 
   &__top-actions {
     margin-bottom: 32px;
@@ -33,12 +43,10 @@
     
     align-items: flex-start;
     flex-wrap: wrap;
-
+    
     @include onDesktop {
-      
       flex-direction: row;
       min-width: 1400px;
-      
     }
   }
 
@@ -46,7 +54,7 @@
     margin: 24px auto;
 
     @include onDesktop {
-      margin: -255px 0px 0px -750px;
+      margin: -270px 0px 0px -750px;
     }
   }
 
@@ -54,7 +62,7 @@
     margin: auto;
 
     @include onDesktop {
-      margin: -445px 0 0 126px;
+      margin: -455px 0 0 126px;
     }
   }
 
@@ -66,7 +74,7 @@
     @include onDesktop {
       order: 0;
 
-      margin: 0 25px 0 600px;
+      margin: 0 0 0 575px;
     }
   }
 
@@ -84,27 +92,8 @@
 
     @include onDesktop {
       flex-direction: row;
-      width: 160px;
+      width: 330px;
 
-      margin: 0;
-      
-
-      
-    }
-  }
-
-  &__button-left {
-    margin: auto;
-
-    @include onDesktop {
-      margin: 58px 10px 0 0;
-    }
-  }
-
-  &__button-right {
-    margin: auto;
-
-    @include onDesktop {
       margin: 58px 0 0 0;
     }
   }
