--- a/styles/blocks/icon.scss
+++ b/styles/blocks/icon.scss
@@ -7,31 +7,35 @@
 
   margin: auto;
 
-  &--menu {
+  &_menu {
     background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png);
+    
     width: 18px;
     height: 13px;
-
-    &:hover {
-      background-image: url(../images/equal-hover.png);
-    }
-
-    &:active {
-      background-image: url(../images/equal-focused.png);
-    }
   }
 
-  &--cross {
-    background-image: url(../images/cross.png);
-    width: 12px;
-    height: 12px;
+  &_tw {
+    background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png);
+  
+    height: 16px;
+    width: 21px;
+  }
 
-    &:hover {
-      background-image: url(../images/cross-hover.png);
-    }
+  &_fb {
+    background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png);
+  
+    height: 17px;
+    width: 18px;
+  }
 
-    &:active {
-      background-image: url(../images/cross-focused.png);
-    }
+  &_in {
+    background-image: url(https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png);
+  
+    height: 22px;
+    width: 17px;
+
+    transform: scale(1.1);
+
+    margin-top: -3px;
   }
 }
