--- a/styles/blocks/page.scss
+++ b/styles/blocks/page.scss
@@ -1,10 +1,7 @@
 .page {
   display: flex;
+  flex-direction: column;
   justify-content: center;
 
-  background-color: #f3c6bd;
-
   scroll-behavior: smooth;
-
-  
 }
