--- a/styles/blocks/footer.scss
+++ b/styles/blocks/footer.scss
@@ -5,17 +5,25 @@
 
   width: 100vw;
 
-  padding: 40px 15px 25px 15px;
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  @include onDesktop {
-    flex-direction: row;
-    align-items: flex-start;
     
-    flex-wrap: wrap;
-    flex: 1;
 
-    max-width: 1400px;
+    padding: 40px 15px 25px 15px;
 
-    padding: 60px  132px 0 130px;
+    @include onDesktop {
+      flex-direction: row;
+      align-items: flex-start;
+      
+      flex-wrap: wrap;
+      flex: 1;
+
+      max-width: 1400px;
+
+      padding: 60px  132px 0 130px;
+    }
   }
 }
